# digital_geometry_processing_projects

./: README  README.md  index.md
Cartel/: Cartel.vcxproj  Cartel.vcxproj.filters  Common.props  ControlState.cpp  ControlState.h  DrawMesh.cpp  DrawMesh.h  EditMesh.cpp  EditMesh.h  IBuffer.cpp  IBuffer.h  Makefile  Makefile.depend  MeshUtils.h  Model.cpp  Model.h  OBJLoader.h  README.md  RenderState.h  ShaderUtils.cpp  ShaderUtils.h  Texture.cpp  Texture.h  TextureTypes.h  TextureUtils.h  Utils.h  VBuffer.cpp  VBuffer.h  WorldState.cpp  WorldState.h  _clang-format  imgui.ini  main.cpp
Cartel/Cartel/: ControlState.cpp  DrawMesh.cpp  DrawMesh.h  Model.cpp  OBJLoader.h  Texture.h  TextureTypes.h  WorldState.cpp  main.cpp
Cartel/contrib/: stb_image_write.h
Cartel/shaders/: axes.vs.glsl  default.fs.glsl  mesh.vs.glsl  wireframe.fs.glsl  wireframe.gs.glsl
adaptive_surface_remesher/: .gitignore
adaptive_surface_remesher/include/: adaptive_remesher.hxx  cgal_tools.hxx  parameters.hxx  pointer_mesh.hxx
adaptive_surface_remesher/meshes/: maxplanck_s_m1_20000.off  maxplanck_s_m1_30000.off  sphere_2.off
adaptive_surface_remesher/src/: cgal_tools.cxx  collapse.exe.cxx  flip.exe.cxx  patch_projector.cxx  predicates.cxx  split.exe.cxx  tests.exe.cxx
as_rigid_as_possible_deformation/: .dir-locals.el  .gitignore  AUTHORS  CHANGELOG  CMakeLists.txt  Doxyfile  Makefile  README  TODO  mview.supp
as_rigid_as_possible_deformation/glut/: array3d.h  glmesh.cpp  glmesh.h  glmesh_common.cpp  main.cpp
as_rigid_as_possible_deformation/mathvector/: mathvector.cpp  mathvector.h  matrix3.h
as_rigid_as_possible_deformation/mesh/: arap.cpp  arap.h  edge.cpp  edge.h  matrix3.h  mesh.cpp  mesh.h  mesh_io.cpp  mesh_io.h  misc.h  timeval.h  triangle.cpp  triangle.h  vertex.cpp  vertex.h
demo/: simplification_commands.txt
docs/: index.md  surface_remesher.txt
meshes/: 205.off  cube_fine.off  cube_medium.off  torus.off
meshes/arap/: arma.off  arma1.off  arma2.off  cactus.off  cube.geo  cube.msh  cube.off  cuboid.off  goff  not_given.off  plane2.off  square.geo  square.msh  square.off  (+3 more)
raytracer/: .gitignore  makefile  raytrace.supp
subdivision_and_simplification/: Cartel  README  edit_mesh.cxx  edit_mesh.hxx  exec_cartel.cxx  exec_glut.cxx  exec_simplify.cxx  exec_subdiv.cxx  exec_test1.cxx  g++5.supp  geometry.hxx  makefile  mesh_io.cxx  mesh_io.hxx
surface_remesher/: README  makefile
(+73 files in other folders)
